DA-BE-110: Decrease amount of word when delete vocabulary out of subcategory